# signal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: signal.hpp  task.hpp
signal/: signal.hpp
tests/: tests.cpp
